force-app/main/default/objects/Trigger_Field_Mapping__c/Trigger_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object is used to configure dynamic field mappings between Salesforce objects. It allows administrators to define which fields from a source object should update corresponding fields on a target object when records are created or updated. The goal is to maintain data consistency across objects without hardcoding logic in Apex triggers. This approach reduces development effort, ensures flexibility, and allows mappings to be managed through configuration instead of code changes.</description>
    <label>Trigger Field Mapping</label>
    <nameField>
        <displayFormat>sl-{00000}</displayFormat>
        <label>Trigger Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Field Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>