force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the field mapping record is currently active. Only active mappings will be applied when records are created or updated. Inactive mappings will be ignored, allowing administrators to temporarily disable certain mappings without deleting them.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>