force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Field_Mapping_Display__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Display__c</fullName>
    <description>A read-only formula field that displays the mapping in the format Source_Field__c → Target_Field__c. This field is used in lookup dialogs and search layouts to help users quickly identify and select the correct field mapping record.</description>
    <formula>Source_Object_Name__c  &amp; &apos; → &apos; &amp;  Target_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Mapping Display</label>
    <type>Text</type>
</CustomField>