force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Mapping_Object__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores configurable field mappings between Salesforce objects to enable dynamic updates from source fields to target fields.</description>
    <label>Mapping Object</label>
    <referenceTo>Trigger_Field_Mapping__c</referenceTo>
    <relationshipLabel>Trigger Field Mapping</relationshipLabel>
    <relationshipName>Trigger_Field_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>