force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Name__c</fullName>
    <description>Specifies the API name of the field on the source object whose value will be mapped. This field, together with the target field, defines the source of the data transfer.</description>
    <label>Source Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>