force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Name__c</fullName>
    <description>Specifies the API name of the Salesforce object where the mapped field values will be updated. This defines the Source object in the field mapping configuration.</description>
    <label>Source Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>