force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Name__c</fullName>
    <description>API name of the field on the target object that will receive the value from the source field.</description>
    <label>Target Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>