force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Target_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Lookup_Field__c</fullName>
    <description>Stores the API name of the lookup field on the source object that links to the target object. This allows the mapping framework to identify which related record should be updated.</description>
    <inlineHelpText>Enter the lookup field’s API name from the source object that points to the target object (e.g., Contact__c, OpportunityId). This tells the system how the source record is related to the target record.</inlineHelpText>
    <label>Target Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>