force-app/main/default/objects/Trigger_Field_Mapping__c/fields/Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Name__c</fullName>
    <description>Specifies the API name of the Salesforce object where the mapped object values will be updated. This defines the destination object in the field mapping configuration.</description>
    <inlineHelpText>Target Object Name</inlineHelpText>
    <label>Target Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>