force-app/main/default/objects/Trigger_Field_Mapping__c/recordTypes/Field_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Field_Mapping</fullName>
    <active>true</active>
    <description>Stores only fields Data</description>
    <label>Field Mapping</label>
</RecordType>