force-app/main/default/objects/Trigger_Field_Mapping__c/recordTypes/ObjectMapping.recordType-meta.xml
<RecordType>
    <fullName>ObjectMapping</fullName>
    <active>true</active>
    <description>Describes to map the object names</description>
    <label>ObjectMapping</label>
</RecordType>